--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
         </nav>
 
     </header>
-    <section class="hero">
+    <section class="Home">
         <h2>Travel Beyond Limits</h2>
-        <h3>Start your travel at a kind of affordable price with Trav-El 
-            <br/>The only travel company that will treat you like a plant. 
-            <br/>By Kryptonians, for Kryptonians. <br> Contact us below </h3>
-        <button class="btn-hero" >Book Now</button>
+        <h3> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, facere!
+             <br> Take Flight </h3>
+        <button class="btn-Home" >Book Now</button>
     </section>
     <section id="locations">
         <header class="locations-head">
             <h2>The Perfect Travelling Experience</h2>
-            <h3>We cover everything from picking the perfect hotel, <br/> to your perfect space craft</h3>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, suscipit! <br/> Lorem ipsum dolor sit. </h3>
             <img src="/img/cloud.png" class="moving-cloud-1 cloud"/>
             <img src="/img/cloud.png" class="moving-cloud-2 cloud"/>
         </header>
@@ -47,7 +46,7 @@
     <section id="benefits">
         <header class="benefits-head">
             <h2>The Perfect Travel</h2>
-        <h3>You'll never be too far from the sun</h3>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
         </header>
         <div class="cards">
             <div class="card">
@@ -55,21 +54,21 @@
                     <img src="/icons/route-solid.svg" alt="">
                 </div>
                     <h4>Travel</h4>
-                    <p>Travel over 250 planets</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, pariatur libero. Quaerat iste aliquid quibusdam?</p>
             </div>
             <div class="card">
                 <div class="card-icon">
                     <img src="/icons/bed-solid.svg" alt="">
                 </div>
                     <h4>Hotel</h4>
-                    <p>Hotel located right by the sun</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, doloremque?</p>
             </div>
             <div class="card">
                 <div class="card-icon">
                     <img src="/icons/plane-departure-solid.svg" alt="">
                 </div>    
                     <h4>Fly</h4>
-                    <p>Complimentary MiracleGro</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ex necessitatibus quo animi, repellat nisi!</p>
             </div>
         </div>
     </section>
@@ -92,6 +91,7 @@
             </form>
         </div>
     </section>
+    
     <footer>
         <div class="footer-wrapper">
             <h5> Trav-El &copy; </h5>
