--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="/icons/route-solid.svg" alt="">
                 </div>
                     <h4>Travel</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, pariatur libero. Quaerat iste aliquid quibusdam?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, doloremque?</p>
             </div>
             <div class="card">
                 <div class="card-icon">
@@ -68,7 +68,7 @@
                     <img src="/icons/plane-departure-solid.svg" alt="">
                 </div>    
                     <h4>Fly</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ex necessitatibus quo animi, repellat nisi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, doloremque?</p>
             </div>
         </div>
     </section>
